[package]
name = "empholite"
version = "0.1.0"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]

[dependencies]
dotenv = "0.8"
env_logger="0.4"
hyper = "0.10"
iron = "0.5"
log = "0.3"
logger = "0.3"
mount = "0.3"
router = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "0.4"
