[package]
name = "client"
version = "0.0.1"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bootstrap-rs = { git = "https://github.com/cmdln/bootstrap-rs.git" }
yew = "~0.16.2"
log = "~0.4.8"
wasm-bindgen = "~0.2.61"
web-sys = "~0.3.38"
wasm-logger = "~0.2.0"
yew-router = "~0.13.0"
