[package]
name = "empholite"
version = "0.2.3"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
edition = "2018"

[dependencies]
shared = { path = "../shared" }
actix-web = "^2.0.0"
actix-rt = "^1.0.0"
dotenv = "~0.15.0"
env_logger= "~0.7.1"
futures = "~0.3.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix = "~0.9.0"
anyhow = "^1.0.28"
lazy_static = "^1.4.0"
actix-files = "~0.2.1"
shellexpand = "^2.0.0"
diesel = { version = "^1.4.4", features = [ "postgres", "r2d2", "uuidv07", "chrono" ] }
uuid = { version = "~0.8.0", features = [ "v4", "serde" ] }
diesel-derive-enum = { version = "^1.0.0", features = [ "postgres" ] }
chrono = { version = "~0.4.11", features = [ "serde" ] }
medallion = "^2.4.0"
