[package]
name = "shared"
version = "0.0.2-beta"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0.111", features = [ "derive" ] }
serde_json = "^1.0.53"
uuid = { version = "~0.8.0", features = [ "v4", "serde" ] }
chrono = { version = "~0.4.11", features = [ "serde" ] }
